--- a/cochlEEG.X/nbproject/Makefile-genesis.properties
+++ b/cochlEEG.X/nbproject/Makefile-genesis.properties
@@ -1,8 +1,8 @@
 #
-#Tue Feb 09 14:45:39 EST 2016
+#Thu Mar 17 19:37:24 EDT 2016
 default.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=dcb36c7e6928d5535e26dd359786192b
 default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v1.34\\bin
-configurations-xml=06897f3fc2dcd21bcda85da0096157c2
+configurations-xml=841d0f3275cd6de2d8912b4a9a4476ce
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=17a71d03e7d3823160f3e8681fc226e8
 default.languagetoolchain.version=1.34
 host.platform=windows
